код перед редактированием

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
           <div class="header__burger-line"></div>
           <div class="header__burger-line"></div>
         </div>
-        <img src="./images/logo.svg" class="header__logo" alt="логотип" />
+        <img src="./src/images/logo.svg" class="header__logo" alt="логотип" />
         <div class="header__block">
           <a href="#" class="header__text">People nearby</a>
           <a href="#" class="header__text">Search</a>
           <button class="header__button">
             <p>Premium</p>
-            <img src="./images/premium.svg" />
+            <img src="./src/images/premium.svg" />
           </button>
         </div>
         <img
-          src="./images/logo-mobile.svg"
+          src="./src/images/logo-mobile.svg"
           alt="almaz"
           class="header__mobile"
         />
@@ -40,7 +40,7 @@
     <main class="main">
       <section class="sidebar">
         <div class="sidebar__block">
-          <img src="./images/avatar.svg" alt="аватар" />
+          <img src="./src/images/avatar.svg" alt="аватар" />
           <div>
             <p class="sidebar__name">Test2412</p>
             <button class="sidebar__button">GET PREMIUM</button>
@@ -48,31 +48,31 @@
         </div>
         <nav class="sidebar__links">
           <li class="sidebar__link">
-            <img src="./images/profile.svg" alt="профиль" />
+            <img src="./src/images/profile.svg" alt="профиль" />
             <a href="#" class="sidebar__link-text">Profile</a>
           </li>
           <li class="sidebar__link">
-            <img src="./images/photo.svg" alt="фото" />
+            <img src="./src/images/photo.svg" alt="фото" />
             <a href="#" class="sidebar__link-text">My photos</a>
           </li>
           <li class="sidebar__link">
-            <img src="./images/messages.svg" alt="сообщения" />
+            <img src="./src/images/messages.svg" alt="сообщения" />
             <a href="#" class="sidebar__link-text">Messages</a>
           </li>
           <li class="sidebar__link">
-            <img src="./images/favorites.svg" alt="сердце" />
+            <img src="./src/images/favorites.svg" alt="сердце" />
             <a href="#" class="sidebar__link-text">Favorites</a>
           </li>
           <li class="sidebar__link">
-            <img src="./images/guests.svg" alt="гость" />
+            <img src="./src/images/guests.svg" alt="гость" />
             <a href="#" class="sidebar__link-text">Guests</a>
           </li>
           <li class="sidebar__link">
-            <img src="./images/settings.svg" alt="настройки" />
+            <img src="./src/images/settings.svg" alt="настройки" />
             <a href="#" class="sidebar__link-text">Settings</a>
           </li>
           <li class="sidebar__link">
-            <img src="./images/log-out.svg" alt="выйти" />
+            <img src="./src/images/log-out.svg" alt="выйти" />
             <a href="#" class="sidebar__link-text">Log out</a>
           </li>
         </nav>
@@ -224,7 +224,7 @@
             <div class="stages__img-wrapper">
               <img
                 class="stages__img"
-                src="./images/icon-message.svg"
+                src="./src/images/icon-message.svg"
                 alt="messages"
               />
             </div>
@@ -232,7 +232,7 @@
           </div>
           <div class="stages__icon">
             <div class="stages__img-wrapper">
-              <img class="stages__img" src="./images/heart.svg" alt="like" />
+              <img class="stages__img" src="./src/images/heart.svg" alt="like" />
             </div>
             <p class="stages__text">Пользоваться другими премиум функциями</p>
           </div>
@@ -240,20 +240,20 @@
             <div class="stages__img-wrapper">
               <img
                 class="stages__img"
-                src="./images/icon-present.svg"
+                src="./src/images/icon-present.svg"
                 alt="present"
               />
             </div>
             <p class="stages__text">Оплачивать подарки</p>
           </div>
           <div class="stages__icon">
-            <img class='stages__almaz' src="./images/almaz.svg" alt="алмаз" />
+            <img class='stages__almaz' src="./src/images/almaz.svg" alt="алмаз" />
           </div>
           <div class="stages__icon">
             <div class="stages__img-wrapper">
               <img
                 class="stages__img"
-                src="./images/visible.svg"
+                src="./src/images/visible.svg"
                 alt="visible"
               />
             </div>
@@ -263,7 +263,7 @@
             <div class="stages__img-wrapper">
               <img
                 class="stages__img"
-                src="./images/icon-message.svg"
+                src="./src/images/icon-message.svg"
                 alt="messages"
               />
             </div>
@@ -273,7 +273,7 @@
             <div class="stages__img-wrapper">
               <img
                 class="stages__img"
-                src="./images/icon-present.svg"
+                src="./src/images/icon-present.svg"
                 alt="present"
               />
             </div>
@@ -282,6 +282,6 @@
         </div>
       </section>
     </main>
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
