код перед редактированием

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" type="text/scss" href="./src/assets/global.scss">
   </head>
   <body class="page">
     <header class="header">
