--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="./src/assets/styles.css" />
   </head>
   <body class="page">
     <header class="header">
@@ -156,7 +157,7 @@
                   <p class="credit__count">50</p>
                   <p class="credit__name">CR</p>
                 </div>
-                <button class="credit__button credit__button_active">
+                <button class="credit__button credit__button_squad">
                   Buy now
                 </button>
               </div>
@@ -232,7 +233,11 @@
           </div>
           <div class="stages__icon">
             <div class="stages__img-wrapper">
-              <img class="stages__img" src="./src/images/heart.svg" alt="like" />
+              <img
+                class="stages__img"
+                src="./src/images/heart.svg"
+                alt="like"
+              />
             </div>
             <p class="stages__text">Пользоваться другими премиум функциями</p>
           </div>
@@ -247,7 +252,11 @@
             <p class="stages__text">Оплачивать подарки</p>
           </div>
           <div class="stages__icon">
-            <img class='stages__almaz' src="./src/images/almaz.svg" alt="алмаз" />
+            <img
+              class="stages__almaz"
+              src="./src/images/almaz.svg"
+              alt="алмаз"
+            />
           </div>
           <div class="stages__icon">
             <div class="stages__img-wrapper">
