--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
         <img src="./src/images/logo.svg" class="header__logo" alt="логотип" />
         <div class="header__block">
-          <a href="#" class="header__text">People nearby</a>
-          <a href="#" class="header__text">Search</a>
+          <a href="#" class="header__link">People nearby</a>
+          <a href="#" class="header__link">Search</a>
           <button class="header__button">
             <p>Premium</p>
             <img src="./src/images/premium.svg" />
@@ -48,34 +48,36 @@
           </div>
         </div>
         <nav class="sidebar__links">
-          <li class="sidebar__link">
-            <img src="./src/images/profile.svg" alt="профиль" />
-            <a href="#" class="sidebar__link-text">Profile</a>
-          </li>
-          <li class="sidebar__link">
-            <img src="./src/images/photo.svg" alt="фото" />
-            <a href="#" class="sidebar__link-text">My photos</a>
-          </li>
-          <li class="sidebar__link">
-            <img src="./src/images/messages.svg" alt="сообщения" />
-            <a href="#" class="sidebar__link-text">Messages</a>
-          </li>
-          <li class="sidebar__link">
-            <img src="./src/images/favorites.svg" alt="сердце" />
-            <a href="#" class="sidebar__link-text">Favorites</a>
-          </li>
-          <li class="sidebar__link">
-            <img src="./src/images/guests.svg" alt="гость" />
-            <a href="#" class="sidebar__link-text">Guests</a>
-          </li>
-          <li class="sidebar__link">
-            <img src="./src/images/settings.svg" alt="настройки" />
-            <a href="#" class="sidebar__link-text">Settings</a>
-          </li>
-          <li class="sidebar__link">
-            <img src="./src/images/log-out.svg" alt="выйти" />
-            <a href="#" class="sidebar__link-text">Log out</a>
-          </li>
+          <ul class="sidebar__link-list">
+            <li class="sidebar__link">
+              <img src="./src/images/profile.svg" alt="профиль" />
+              <a href="#" class="sidebar__link-text">Profile</a>
+            </li>
+            <li class="sidebar__link">
+              <img src="./src/images/photo.svg" alt="фото" />
+              <a href="#" class="sidebar__link-text">My photos</a>
+            </li>
+            <li class="sidebar__link">
+              <img src="./src/images/messages.svg" alt="сообщения" />
+              <a href="#" class="sidebar__link-text">Messages</a>
+            </li>
+            <li class="sidebar__link">
+              <img src="./src/images/favorites.svg" alt="сердце" />
+              <a href="#" class="sidebar__link-text">Favorites</a>
+            </li>
+            <li class="sidebar__link">
+              <img src="./src/images/guests.svg" alt="гость" />
+              <a href="#" class="sidebar__link-text">Guests</a>
+            </li>
+            <li class="sidebar__link">
+              <img src="./src/images/settings.svg" alt="настройки" />
+              <a href="#" class="sidebar__link-text">Settings</a>
+            </li>
+            <li class="sidebar__link">
+              <img src="./src/images/log-out.svg" alt="выйти" />
+              <a href="#" class="sidebar__link-text">Log out</a>
+            </li>
+          </ul>
         </nav>
       </section>
       <section class="credit">
