--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="page">
     <header class="header">
       <div class="header__wrapper">
-        <div class="header__burger" id="burger">
+        <div class="header__burger">
           <span></span>
         </div>
         <img src="./src/images/logo.svg" class="header__logo" alt="логотип" />
