--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist/main.css">
+
   </head>
   <body class="page">
     <header class="header">
@@ -285,6 +285,6 @@
         </div>
       </section>
     </main>
-    <script src="./src/index.js"></script>
+    <script src="./dist/index.js"></script>
   </body>
 </html>
