--- a/index.html
+++ b/index.html
@@ -285,6 +285,6 @@
         </div>
       </section>
     </main>
-    <script src="./dist/index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
