сделал паралакс и повесил до ховер

--- a/index.html
+++ b/index.html
@@ -96,35 +96,27 @@
                   </div>
                 </div>
 
-                <div class="slide s2">
-                  <div class="slide__card-squad">
-                    <div class="slide__price">
-                      <p class="slide__count">150 CR</p>
-                    </div>
+                <div class="credit__slide s2">
+                  <div class="credit__card-squad">
+                    <p class="credit__count">150 CR</p>
                   </div>
                 </div>
 
-                <div class="slide s3">
-                  <div class="slide__card-squad">
-                    <div class="slide__price">
-                      <p class="slide__count">300 CR</p>
-                    </div>
+                <div class="credit__slide s3">
+                  <div class="credit__card-squad">
+                    <p class="credit__count">300 CR</p>
                   </div>
                 </div>
 
-                <div class="slide s4">
-                  <div class="slide__card-squad">
-                    <div class="slide__price">
-                      <p class="slide__count">500 CR</p>
-                    </div>
+                <div class="credit__slide s4">
+                  <div class="credit__card-squad">
+                    <p class="credit__count">500 CR</p>
                   </div>
                 </div>
 
-                <div class="slide s5">
-                  <div class="slide__card-squad">
-                    <div class="slide__price">
-                      <p class="slide__count">1000 CR</p>
-                    </div>
+                <div class="credit__slide s5">
+                  <div class="credit__card-squad">
+                    <p class="credit__count">1000 CR</p>
                   </div>
                 </div>
               </div>
@@ -233,7 +225,9 @@
                 alt="like"
               />
             </div>
-            <p class="credit__stages-text">Пользоваться другими премиум функциями</p>
+            <p class="credit__stages-text">
+              Пользоваться другими премиум функциями
+            </p>
           </div>
           <div class="credit__stages-icon">
             <div class="credit__stages-wrapper">
